--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-html, body, canvas {
+html, body {
     width:  100%;
     height: 100%;
     margin: 0;
+    padding: 0;
   }
 
-    body {
-        background-color: #000;
-        overflow: hidden;
-    }
+body {
+    background-color: black;
+}
